<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/add"
    android:layout_marginLeft="@dimen/margin_8"
    android:layout_marginRight="@dimen/margin_8"
    android:layout_marginTop="@dimen/margin_16"
    android:layout_marginBottom="@dimen/margin_16"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:elevation="@dimen/margin_4"
    android:foreground="?android:attr/selectableItemBackground"
    android:translationZ="3dp"
    app:cardCornerRadius="4dp"
    app:pressedTranslationZ="@dimen/margin_8">
<LinearLayout
    android:id="@+id/content_medicine_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/list2"
    tools:context="wear.sunshine.android.example.com.capstone_1.activity.MedicineDetailsActivity"
    tools:showIn="@layout/activity_medicine_details">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:id="@+id/imageProd"
        android:transitionName="@string/product_trans"
        android:contentDescription="@string/product_image"
        android:src="@android:drawable/ic_menu_crop"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/product_details"
            android:textStyle="bold"
            android:text="@string/product_details"
            android:textSize="@dimen/text_size_18"
            android:visibility="gone"
            android:textColor="@android:color/white"
            android:id="@+id/nameT"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/product_details"
            android:textStyle="bold"
            android:text="@string/product_details"
            android:textSize="@dimen/text_size_16"
            android:textColor="@android:color/white"
            android:id="@+id/details"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rate"
            android:textColor="@android:color/black"
            android:id="@+id/rate"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/available_pharmacy"
            android:textColor="@android:color/black"
            android:id="@+id/pharmacyDetails"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/producer"
            android:textColor="@android:color/black"
            android:id="@+id/producer"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contents"
            android:textColor="@android:color/black"
            android:id="@+id/contents"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:contentDescription="@string/opening_and_closing_time"
            android:id="@+id/timing"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/margin_16"
            android:id="@+id/map"
            android:onClick="mapViewClicked"
            android:contentDescription="@string/location"
            android:src="@drawable/ic_gb_google_map_icon"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</LinearLayout>
</android.support.v7.widget.CardView>