<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:elevation="5dp"
    android:translationZ="3dp"
    card:cardCornerRadius="@dimen/margin_4"
    card:cardUseCompatPadding="true"
    android:layout_height="wrap_content">

<LinearLayout  android:orientation="horizontal"
    android:layout_width="match_parent"
    android:padding="@dimen/margin_16"
    android:id="@+id/card"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="100dp"
        android:scaleType="centerCrop"
        android:id="@+id/logo"
        android:contentDescription="@string/product_image"
        android:transitionName="@string/product_trans"
        android:layout_marginRight="@dimen/margin_8"
        android:src="@android:drawable/ic_menu_crop"
        android:layout_height="100dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_toRightOf="@+id/logo"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:maxLines="2"
        android:textStyle="bold"
        android:text="Title"
        android:contentDescription="@string/title"
        android:id="@+id/title"
        android:textSize="@dimen/text_size_16"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_toRightOf="@+id/logo"
        android:id="@+id/address"
        android:contentDescription="@string/address"
        android:textSize="@dimen/text_size_14"
        android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/logo"
            android:maxLines="2"
            android:contentDescription="@string/timing"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_14"
            android:layout_height="wrap_content"
            android:id="@+id/timing" />
    </LinearLayout>
</LinearLayout>
</android.support.v7.widget.CardView>