<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/card"
        android:padding="5dp"
        android:background="@color/list5"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/logo"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:maxLines="2"
            android:textStyle="bold"
            android:text="Title"
            android:contentDescription="@string/title"
            android:id="@+id/title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_16"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/logo"
            android:id="@+id/address"
            android:textColor="@android:color/black"
            android:contentDescription="@string/address"
            android:textSize="@dimen/text_size_14"
            android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_toRightOf="@+id/logo"
                android:maxLines="2"
                android:contentDescription="@string/timing"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_14"
                android:layout_height="wrap_content"
                android:id="@+id/timing" />
        </LinearLayout>
    </LinearLayout>
